--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "iobroker.ikettle2",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "Control your Smarter iKettle 2.0 with ioBroker.",
   "author": {
     "name": "Jey Cee",
     "email": "jey-cee@live.com"
   },
-  "homepage": "https://github.com/jey-cee/ioBroker.ikettle2",
+  "homepage": "https://github.com/Jey-Cee/ioBroker.ikettle2",
   "license": "MIT",
   "keywords": [
     "smarter",
@@ -15,7 +15,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/jey-cee/ioBroker.ikettle2"
+    "url": "https://github.com/Jey-Cee/ioBroker.ikettle2"
   },
   "dependencies": {
     "@iobroker/adapter-core": "^2.4.0"
@@ -52,7 +52,7 @@
     "lint": "eslint"
   },
   "bugs": {
-    "url": "https://github.com/jey-cee/ioBroker.ikettle2/issues"
+    "url": "https://github.com/Jey-Cee/ioBroker.ikettle2/issues"
   },
   "readmeFilename": "README.md"
 }
