--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "@iobroker/adapter-core": "^2.5.1"
   },
   "devDependencies": {
+    "@alcalzone/release-script": "^3.5.6",
+    "@alcalzone/release-script-plugin-iobroker": "^3.5.7",
+    "@alcalzone/release-script-plugin-license": "^3.5.3",
     "@iobroker/testing": "^2.5.3",
     "@types/chai": "^4.3.0",
     "@types/chai-as-promised": "^7.1.4",
@@ -49,7 +52,8 @@
     "test:integration": "mocha test/integration --exit",
     "test": "npm run test:js && npm run test:package",
     "check": "tsc --noEmit -p tsconfig.check.json",
-    "lint": "eslint"
+    "lint": "eslint",
+    "release": "release-script"
   },
   "bugs": {
     "url": "https://github.com/Jey-Cee/ioBroker.ikettle2/issues"
