--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Control your Smarter iKettle 2.0 with ioBroker.",
   "author": {
     "name": "Jey Cee",
-    "email": "jey-cee@live.com"
+    "email": "iobroker@all-smart.net"
   },
   "homepage": "https://github.com/Jey-Cee/ioBroker.ikettle2",
   "license": "MIT",
@@ -18,31 +18,31 @@
     "url": "https://github.com/Jey-Cee/ioBroker.ikettle2"
   },
   "dependencies": {
-    "@iobroker/adapter-core": "^3.1.6"
+    "@iobroker/adapter-core": "^3.2.1"
   },
   "devDependencies": {
     "@alcalzone/release-script": "^3.8.0",
     "@alcalzone/release-script-plugin-iobroker": "^3.7.2",
     "@alcalzone/release-script-plugin-license": "^3.7.0",
-    "@iobroker/testing": "^4.1.3",
+    "@iobroker/testing": "^5.0.0",
     "@types/chai": "^4.3.11",
     "@types/chai-as-promised": "^8.0.0",
     "@types/gulp": "^4.0.17",
-    "@types/mocha": "^10.0.7",
-    "@types/node": "^22.5.1",
+    "@types/mocha": "^10.0.8",
+    "@types/node": "^22.7.4",
     "@types/proxyquire": "^1.3.31",
-    "@types/sinon": "^17.0.2",
-    "@types/sinon-chai": "^3.2.12",
+    "@types/sinon": "^17.0.3",
+    "@types/sinon-chai": "^4.0.0",
     "axios": "^1.7.7",
     "chai": "^4.5.0",
     "chai-as-promised": "^8.0.0",
-    "eslint": "^9.10.0",
+    "eslint": "^9.11.1",
     "gulp": "^5.0.0",
     "mocha": "^10.7.3",
     "proxyquire": "^2.1.3",
-    "sinon": "^18.0.0",
+    "sinon": "^19.0.2",
     "sinon-chai": "^3.7.0",
-    "typescript": "^5.5.4"
+    "typescript": "^5.6.2"
   },
   "main": "main.js",
   "scripts": {
