--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "homepage": "https://github.com/Jey-Cee/ioBroker.ikettle2",
   "license": "MIT",
   "keywords": [
+    "ioBroker",
     "smarter",
     "ikettle 2.0",
     "water heater"
@@ -17,6 +18,9 @@
     "type": "git",
     "url": "https://github.com/Jey-Cee/ioBroker.ikettle2"
   },
+  "engines": {
+    "node": ">= 18"
+  },
   "dependencies": {
     "@iobroker/adapter-core": "^3.2.1"
   },
@@ -24,6 +28,7 @@
     "@alcalzone/release-script": "^3.8.0",
     "@alcalzone/release-script-plugin-iobroker": "^3.7.2",
     "@alcalzone/release-script-plugin-license": "^3.7.0",
+    "@iobroker/adapter-dev": "^1.3.0",
     "@iobroker/testing": "^5.0.0",
     "@types/chai": "^4.3.11",
     "@types/chai-as-promised": "^8.0.0",
@@ -33,11 +38,9 @@
     "@types/proxyquire": "^1.3.31",
     "@types/sinon": "^17.0.3",
     "@types/sinon-chai": "^4.0.0",
-    "axios": "^1.7.7",
     "chai": "^4.5.0",
     "chai-as-promised": "^8.0.0",
     "eslint": "^9.11.1",
-    "gulp": "^5.0.0",
     "mocha": "^10.7.3",
     "proxyquire": "^2.1.3",
     "sinon": "^19.0.2",
@@ -45,6 +48,16 @@
     "typescript": "^5.6.2"
   },
   "main": "main.js",
+  "files": [
+    "admin{,/!(src)/**}/!(tsconfig|tsconfig.*|.eslintrc).{json,json5}",
+    "admin{,/!(src)/**}/*.{html,css,png,svg,jpg,js}",
+    "admin/i18n/*.{json,json5}",
+    "lib/",
+    "www/",
+    "io-package.json",
+    "LICENSE",
+    "main.js"
+  ],
   "scripts": {
     "test:js": "mocha --config test/mocharc.custom.json \"{!(node_modules|test)/**/*.test.js,*.test.js,test/**/test!(PackageFiles|Startup).js}\"",
     "test:package": "mocha test/package --exit",
